[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Clients/MultiplayerClient.gd" type="Script" id=1]
[ext_resource path="res://src/Main/MainMaster.gd" type="Script" id=2]
[ext_resource path="res://assets/icon.png" type="Texture" id=3]
[ext_resource path="res://src/UI/LoginAndRegister.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/spinner.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
resource_name = "spin"
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.10957, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "wobble"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 50 ), Vector2( 972, 550 ) ]
}

[node name="MainMaster" type="Node"]
script = ExtResource( 2 )

[node name="MasterClient" type="Node" parent="."]
script = ExtResource( 1 )
is_master = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Spinner" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.159999, 0.159999 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Spinner"]
anims/spin = SubResource( 2 )

[node name="LoginAndRegister" parent="." instance=ExtResource( 4 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 300.0
margin_top = 281.0
margin_right = 724.0
margin_bottom = 319.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 38.0

[node name="Description" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
text = "Main Master Client"

[node name="StartMatchButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 38.0
text = "Start Match"

[node name="StopMatchButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 12.0
margin_bottom = 20.0
text = "Stop"

[node name="Scripts" type="TabContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 424.0
margin_bottom = 38.0
rect_min_size = Vector2( 300, 0 )

[node name="Ball" type="Sprite" parent="."]
visible = false
position = Vector2( 50, 50 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ball"]
anims/wobble = SubResource( 1 )

[connection signal="connection_closed" from="MasterClient" to="." method="_on_MasterClient_connection_closed"]
[connection signal="script_received" from="MasterClient" to="." method="_on_MasterClient_script_received"]
[connection signal="login_pressed" from="LoginAndRegister" to="." method="_on_LoginAndRegister_login_pressed"]
[connection signal="register_pressed" from="LoginAndRegister" to="." method="_on_LoginAndRegister_register_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/StartMatchButton" to="." method="_on_StartMatchButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/StopMatchButton" to="." method="_on_StopMatchButton_pressed"]
