[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Clients/MultiplayerClient.gd" type="Script" id=1]
[ext_resource path="res://src/Main/MainPlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/icon.png" type="Texture" id=3]

[node name="MainPlayer" type="Node"]
script = ExtResource( 2 )

[node name="PlayerClient" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Login" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_right = 96.0
margin_bottom = 86.0

[node name="Client1" type="Button" parent="Login"]
margin_right = 192.0
margin_bottom = 41.0
size_flags_vertical = 3
text = "Client1"

[node name="Client2" type="Button" parent="Login"]
margin_top = 45.0
margin_right = 192.0
margin_bottom = 86.0
size_flags_vertical = 3
text = "Client2"

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 454.0
margin_top = 263.0
margin_right = 569.0
margin_bottom = 337.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 115.0
margin_bottom = 14.0
text = "Main Player Client"

[node name="TextEdit" type="TextEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 115.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 14 )

[node name="SendTextButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 115.0
margin_bottom = 56.0
text = "Send Text"

[node name="TotalScripts" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 115.0
margin_bottom = 74.0
text = "Total Scripts: 0"

[node name="Ball" type="Sprite" parent="."]
visible = false
position = Vector2( 50, 50 )
texture = ExtResource( 3 )

[connection signal="connection_closed" from="PlayerClient" to="." method="_on_PlayerClient_connection_closed"]
[connection signal="pond_state_updated" from="PlayerClient" to="." method="_on_PlayerClient_pond_state_updated"]
[connection signal="pressed" from="Login/Client1" to="." method="_on_Client1_pressed"]
[connection signal="pressed" from="Login/Client2" to="." method="_on_Client2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SendTextButton" to="." method="_on_SendTextButton_pressed"]
